--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,23 @@
     <artifactId>dl4j-spark-benchmark</artifactId>
     <version>0.4.1-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>nexus-staging</id>
+            <name>Nexus Staging</name>
+            <url>https://oss.sonatype.org/content/repositories/orgnd4j-1087/</url>
+        </repository>
+    </repositories>
 
     <properties>
         <spring.version>3.2.5.RELEASE</spring.version>
         <logback.version>1.1.2</logback.version>
         <netty.version>4.0.28.Final</netty.version>
         <lombok.version>1.16.4</lombok.version>
-        <nd4j.version>0.4.1-SNAPSHOT</nd4j.version>
-        <dl4j.version>0.4.1-SNAPSHOT</dl4j.version>
-        <!--<nd4j.version>0.4.0</nd4j.version>-->
-        <!--<dl4j.version>0.4.0</dl4j.version>-->
+        <!--<nd4j.version>0.4.1-SNAPSHOT</nd4j.version>-->
+        <!--<dl4j.version>0.4.1-SNAPSHOT</dl4j.version>-->
+        <nd4j.version>0.4.0</nd4j.version>
+        <dl4j.version>0.4.0</dl4j.version>
         <scala.version>2.11.6</scala.version>
         <scala.binary.version>2.11</scala.binary.version>
         <!--<scala.version>2.10.6</scala.version>-->
@@ -33,9 +40,9 @@
             <properties>
                 <spark.scope>provided</spark.scope>
             </properties>
-            <!--<activation>-->
-                <!--<activeByDefault>true</activeByDefault>-->
-            <!--</activation>-->
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
         </profile>
 
         <!-- For building jar for running Spark local: "-P sparklocal"-->
@@ -44,9 +51,6 @@
             <properties>
                 <spark.scope>compile</spark.scope>
             </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
         </profile>
 
     </profiles>
